# BUAA-Compiler

./: CMakeLists.txt  Lexer.cpp  Lexer.h  Parser.cpp  README.md  SymbolType.h  Tree.cpp  main.cpp  utils.cpp  utils.h
Error/: errorDeal.h  errorItem.h
Lexer/: Lexer.cpp  Lexer.h
Lexer/include/: Lexer.h  LexerSummary.h
Parser/: Parser.cpp  Parser.h  Tree.cpp
Parser/include/: Parser.h  Symbol.h  SymbolTable.h  Tree.h  parserDefine.h
SymbolTable/: Symbol.h  SymbolTable.h
include/: Lexer.h  LexerSummary.h  Parser.h  Register.cpp  Register.h  Symbol.h  SymbolTable.h  Token.h  Tree.cpp  Tree.h  parserDefine.h
llvm/: llvmIR.cpp  llvmIR.h  printIR.cpp  printIR.h
